syntax = "proto3";
option go_package = "/protos";
import "google/protobuf/timestamp.proto";
package protos;


message Task {
    string uuid = 1;
    string plugin = 2;
    repeated string instactions = 3;
    google.protobuf.Timestamp creationTime = 4;
    string dagId = 5;
}

  
message TaskResult {
    string uuid = 1;
    bool status = 2;
    bool dataflow = 3;
    repeated DataRow data = 4;
    google.protobuf.Timestamp endTime = 5;
}

message DataRow {
    repeated string data = 1 ;
}